@@ -15,10 +15,11 @@ set -e # Exit early if any commands fail
 (
   cd "$(dirname "$0")" # Ensure compile steps are run within the repository directory
   mvn -q -B package -Ddir=/tmp/codecrafters-build-shell-java
+  #mvn -q -B package -Ddir=/tmp/codecrafters-build-shell-java 2>&1 | grep -v "WARNING"
 )
 
 # Copied from .codecrafters/run.sh
 #
 # - Edit this to change how your program runs locally
 # - Edit .codecrafters/run.sh to change how your program runs remotely
-exec java -jar /tmp/codecrafters-build-shell-java/codecrafters-shell.jar "$@"
+exec java --enable-native-access=ALL-UNNAMED -jar /tmp/codecrafters-build-shell-java/codecrafters-shell.jar "$@"
